# 3sem

Lesson3_distribution/: CMakeLists.txt  main.cpp  origin.cpp
Lesson3_distribution/headers/: AndState.h  ContAddingState.h  ContExceptionState.h  DiscreteState.h  OrState.h  ProbabilityTest.h  SegmentState.h  SetAddings.h  SetState.h  State.h  StateEngine.h  Unform_distribution.h  XorState.h  libs.h
subvector/: CMakeLists.txt  Subvector.h  container.h  main.cpp  stack.h  subvector.cpp  subvector.h  subvector_profiler.cpp
